--- a/css/JadenCSS.css
+++ b/css/JadenCSS.css
@@ -16,8 +16,8 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: 75%;
-  height: 100%;
+  width: 100%;
+  height: 150vh;
 }
 
 .JadenPicAndInfo{
