--- a/css/JadenCSS.css
+++ b/css/JadenCSS.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   background-color: white;
   width: 100%;
-  height: 150vh;
+  height: 350vh;
 }
 
 .JadenPicAndInfo{
@@ -117,18 +117,6 @@ li{
   font-size: 1.5vw;  
 }
 
-.TextBoxTitle{
-  font-size: 1.5vw;  
-}
-.JadenTextArea1{
-  width: 100%;
-  height: 50%;
-}
-
-.JadenTextArea2{
-  width: 100%;
-  height: 500%;
-}
 
 .JadenClasses{
   display: flex;
@@ -186,7 +174,32 @@ li{
   padding-top: 0.5%;
   padding-bottom: 0.5%;
 }
-.SubmitButton{
-  height: 40%;
+
+.EmailAddressForm{
+  height: 10%;
   width: 100%;
+}
+.CommentSubmissionForm{
+  width: 100%;
+  height: 70%;
+}
+
+.SubmitButton{
+  height: 10%;
+  width: 100%;
+  font-size: 1.2vw;
+}
+
+.TextBoxTitle{
+  font-size: 1.5vw;  
+}
+.JadenTextArea1{
+  width: 100%;
+  font-size: 1.2vw;  
+}
+
+.JadenTextArea2{
+  width: 100%;
+  height: 80%;
+  font-size: 1.2vw;
 }
