--- a/css/JadenCSS.css
+++ b/css/JadenCSS.css
@@ -9,6 +9,7 @@
   background-color: grey;
   justify-content: center;
   width: 100%;
+  height: 150vh;
 }
 
 .pageContentBox{
@@ -17,7 +18,7 @@
   flex-direction: column;
   background-color: white;
   width: 100%;
-  height: 150vh;
+  height: 100%;
 }
 
 .JadenPicAndInfo{
