--- a/css/JadenCSS - Copy.css
+++ b/css/JadenCSS - Copy.css
@@ -6,7 +6,9 @@
   flex-wrap: nowrap;
   display: flex;
   flex-direction: row;
-  background-color: grey;
+  background: url("http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/b1033ec26259aab.png");
+  background-size: 15vh 15vh;
+  background-color: blue;
   justify-content: center;
   width: 100%;
   height: 150vh;
@@ -29,7 +31,9 @@
   width: 100%;
   height: 15%;
   border-top: solid;
-  border-width: .5em;
+  border-left: solid;
+  border-right: solid;
+  border-width: .25em;
 }
 
 .jadenPic{
@@ -45,7 +49,7 @@
   justify-content: flex-start;
   flex-wrap: nowrap;
   border-left: solid;
-  border-width: .5em;
+  border-width: .25em;
 }
 
 .JadenNameBox{
@@ -100,8 +104,8 @@
   flex-wrap: nowrap;
   width: 100%;
   height: 15%;
-  border-top: solid;
-  border-width: .5em; 
+  border: solid;
+  border-width: .25em; 
   padding-left: 4%;
   padding-right: 4%;
   padding-top: 0.5%;
@@ -127,8 +131,8 @@ li{
   flex-wrap: nowrap;
   width: 100%;
   height: 27%;
-  border-top: solid;
-  border-width: .5em; 
+  border: solid;
+  border-width: .25em; 
   padding-left: 4%;
   padding-right: 4%;
   padding-top: 0.5%;
@@ -143,8 +147,8 @@ li{
   flex-wrap: nowrap;
   width: 100%;
   height: 10.5%;
-  border-top: solid;
-  border-width: .5em; 
+  border: solid;
+  border-width: .25em; 
   padding-left: 4%;
   padding-right: 4%;
   padding-top: 0.5%;
@@ -171,8 +175,8 @@ li{
   flex-wrap: nowrap;
   width: 100%;
   height: 35%;
-  border-top: solid;
-  border-width: .5em; 
+  border: solid;
+  border-width: .25em; 
   padding-left: 4%;
   padding-right: 4%;
   padding-top: 0.5%;
