--- a/css/JadenCSS - Copy.css
+++ b/css/JadenCSS - Copy.css
@@ -1,3 +1,5 @@
+/*This is the page CSS for Phones*/
+
 * {
   box-sizing: border-box;
 } 
@@ -190,11 +192,11 @@ li{
 }
 .CommentSubmissionForm{
   width: 100%;
-  height: 80%;
+  height: 70%;
 }
 
 .SubmitButton{
-  height: 20%;
+  height: 15%;
   width: 100%;
   font-size: 1.2vw;
 }
@@ -209,6 +211,6 @@ li{
 
 .JadenTextArea2{
   width: 100%;
-  height: 80%;
+  height: 70%;
   font-size: 1.2vw;
 }
